--- a/Responsive_Web_Design_Certification/Technical_Documentation_Page/style.css
+++ b/Responsive_Web_Design_Certification/Technical_Documentation_Page/style.css
@@ -49,7 +49,7 @@ pre {
   font-family: "Lucida Console", Monaco, monospace;
   font-size: 0.9rem;
   padding: 1rem;
-  overflow: scroll;
+  overflow: auto;
 }
 .home-btn {
   background-color: white;
